Bug 513500 - hang when opening DVI files
Summary: hang when opening DVI files
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: DVI backend (other bugs)
Version First Reported In: 25.08.1
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-12-17 18:07 UTC by Bernhard E. Reiter
Modified: 2025-12-19 10:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
/usr/share/texmf/doc/generic/epsf/okay/tepsf3.dvi from package texlive-epsf-doc-2021.189.2.7.4svn21461-150400.17.1.noarch (3.36 KB, application/x-dvi)
2025-12-17 18:07 UTC, Bernhard E. Reiter
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard E. Reiter 2025-12-17 18:07:50 UTC
Created attachment 187750 [details]
/usr/share/texmf/doc/generic/epsf/okay/tepsf3.dvi from package texlive-epsf-doc-2021.189.2.7.4svn21461-150400.17.1.noarch

SUMMARY
When trying to open a .dvi file, okular hangs. 
I can be killed.

STEPS TO REPRODUCE
1. open okular on any .dvi file, e.g.  /usr/share/texmf/doc/generic/tds/tds.dvi vom texlive-tds-2021.189.1.1svn15878-150400.18.1.noarch
or /usr/share/texmf/doc/generic/epsf/okay/tepsf3.dvi from texlive-epsf-doc-2021.189.2.7.4svn21461-150400.17.1.noarch

OBSERVED RESULT
okular does not react anymore.
Usually the file is not displayed (though with /usr/share/texmf/doc/fonts/euro-ce/euro-ce.dvi it shows something and then goes into hang)



EXPECTED RESULT
File contents should be shown, okular should react.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Leap 15.6
KDE Plasma Version: 6.4.90
KDE Frameworks Version: 6.18.0
Qt Version: 6.9.2
Kernel Version: 6.4.0-150600.23.73-default (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ i7-2670QM CPU @ 2.20GHz

rpm -qa | grep okular
okular-lang-25.08.1-kf.1.2.noarch
okular-spectre-25.08.1-kf.1.2.x86_64
okular-25.08.1-kf.1.2.x86_64
Comment 1 Bug Janitor Service 2025-12-18 00:20:26 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/okular/-/merge_requests/1287
Comment 2 Bernhard E. Reiter 2025-12-18 08:35:01 UTC
Additional info: strace does not issue messages in the hang, so the process will be waiting on something.

s/I can be killed./It can be killed/
Comment 3 Sune Vuorela 2025-12-18 12:29:51 UTC
Git commit 95fcef0c540b00de30920c2afae62a6e4877f3ea by Sune Vuorela, on behalf of Albert Astals Cid.
Committed on 18/12/2025 at 07:28.
Pushed by aacid into branch 'master'.

DVI: account for page info being unknown in text handling

M  +12   -7    generators/dvi/generator_dvi.cpp

https://invent.kde.org/graphics/okular/-/commit/95fcef0c540b00de30920c2afae62a6e4877f3ea
Comment 4 Albert Astals Cid 2025-12-19 10:13:24 UTC
Git commit 9941dc16e11b444401d1d24af3b6b658ef7d439f by Albert Astals Cid.
Committed on 19/12/2025 at 10:13.
Pushed by aacid into branch 'release/25.12'.

DVI: account for page info being unknown in text handling
(cherry picked from commit 95fcef0c540b00de30920c2afae62a6e4877f3ea)

M  +12   -7    generators/dvi/generator_dvi.cpp

https://invent.kde.org/graphics/okular/-/commit/9941dc16e11b444401d1d24af3b6b658ef7d439f