DVI: account for page info being unknown in text handling

BUG: 513500